davtro/ch/website-argocd-k8s-githubactions-kustomize-kyverno03/manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: davtro-website-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: davtro-website
  template:
    metadata:
      labels:
        app: davtro-website
    spec:
      containers:
        - name: davtro-website
          image: ghcr.io/exea-centrum/website-argocd-k8s-githubactions-kustomize-kyverno03:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
