davtro/ch/website-argocd-k8s-githubactions-kustomize-kyverno03/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: davtro-website-svc
spec:
  selector:
    app: davtro-website
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
